# jupyter-server-client

./: .gitignore  Makefile  README.md  SETUP.md  example.ipynb  example.py  integration_example.py  pyproject.toml
dev/: Untitled.ipynb
docs/: EXECS_MANAGER.md
examples/: example_execs.py
jupyter_server_api/: client.py  http_client.py  models.py
jupyter_server_api/managers/: __init__.py  execs.py
jupyter_server_client/: __init__.py  models.py
tests/: README.md  __init__.py  conftest.py  requirements.txt  run_tests.py  test_client.py  test_http_client.py  test_integration.py  test_kernels.py  test_models.py
